
04-06-2009: B Carvalho

** list.celfiles() also returns .cel.gz files

04-07-2009: B Carvalho

** Cleaned up code.

04-13-2009: B Carvalho

** Changed read.table to read.delim in getCrlmmSummaries so filenames with white spaces do not break the code.

04-16-2009: B Carvalho

** Removed some unused code

04-24-2009: B Carvalho

** Added getContainer help page

** Added more verbosity to read.xysfiles

04-29-2009: B Carvalho

** Fixed documentation for read.celfiles and read.xysfiles

** Changed error message (when annotation cannot be loaded)

05-07-2009: B Carvalho

** Added C-code to parse XYS files

05-09-2009: B Carvalho

** Fixed sampleNames that was being ignored

** Removed extra ordering for XYS files

05-11-2009: B Carvalho

** Fixed bug with getMetadata2: if user passes a phenoData object,
this would be incorrectly combined with other objects because the
sampleNames were different.

05-21-2009: B Carvalho

** Fixed bug with basicRMA.

07-31-2009: B Carvalho

** Fixed warnings at the C-level

** More strict versions of dependencies

08-05-2009: B Carvalho

** Replaced require(annotation(obj)) by requireAnnotation(annotation(obj))

08-06-2009: B Carvalho

** RMA, for Exon and Gene arrays, is now possible to the gene-level

08-14-2009: B Carvalho

** Fixed image() for Affymetrix arrays

08-18-2009: B Carvalho

** Fixed and improved behavior of boxplot() for ExpressionSet and FeatureSet objects

08-20-2009: B Carvalho

** Added more details to the documentation associated to list.celfiles() and list.xysfiles()

10-21-2009: B Carvalho

** Fixed some probles in the vignettes

11-09-2009: B Carvalho

** removed rma_background2.c and rma_background2.h; preprocessCore is used instead.

11-12-2009: B Carvalho

** added rma() for quick and informal inspection of CNPs

12-02-2009: B Carvalho - committed version 1.11.6

** brought methods from oligoClasses

12-03-2009: B Carvalho - committed version 1.11.8

** brought documentation from oligoClasses