@@ -1,10 +1,11 @@
 Package: oligo
-Version: 1.11.9
+Version: 1.11.10
 Title: Tools for low-level analysis of oligonucleotide arrays.
 Author: Benilton Carvalho <carvalho@bclab.org>, Rafael A. Irizarry with contributions from Ben Bolstad, Vince Carey, Robert Gentleman, Wolfgang Huber
 Maintainer: Benilton Carvalho <carvalho@bclab.org>
-Depends: R (>= 2.10.0), oligoClasses (>= 1.9.14), preprocessCore (>= 1.7.4)
-Imports: splines, affxparser (>= 1.17.3), graphics, utils, stats, DBI (>= 0.2-4), Biobase (>= 2.5.5), methods, affyio (>= 1.13.3)
+Depends: R (>= 2.11.0), oligoClasses (>= 1.9.24), preprocessCore (>= 1.9.0)
+Imports: splines, affxparser (>= 1.17.3), graphics, utils, stats, DBI (>= 0.2-4), Biobase (>= 2.7.3), methods, affyio (>= 1.15.1)
+Enhances: bigmemory
 LinkingTo: preprocessCore
 Suggests: hapmap100kxba, pd.mapping50k.xba240, pd.hg18.60mer.expr, maqcExpression4plex, genefilter, limma, RColorBrewer
 Description: A package to analyze oligonucleotide arrays (expression/SNP/tiling/exon) at probe-level.
