@@ -153,3 +153,7 @@ sampleNames were different.
 12-03-2009: B Carvalho - committed version 1.11.8
 
 ** brought documentation from oligoClasses
+
+12-06-2009: B Carvalho - committed version 1.11.10
+
+** removed se.exprs
